[tool.poetry]
name = "clicker_heroes"
version = "0.1.0"
description = ""
authors = ["Patrick Childers <patrickchildersit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.53"
Pillow = "^9.0.1"
keyboard = "^0.13.5"
lox = "^0.10.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
